--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
-VITE_VERCEL_API_URL_BASE= "https://pf-back-production-4255.up.railway.app"
-#  VITE_VERCEL_API_URL_BASE= "http://localhost:3001"
+
+
+# new
+VITE_VERCEL_API_URL_BASE= "https://sserver-ladyfitlovers-production.up.railway.app"
+
 VITE_VERCEL_CLOUDINARY_URL="https://api.cloudinary.com/v1_1/dry5vslxw/image/upload"
+
+# OLD
+# VITE_VERCEL_API_URL_BASE= "https://pf-back-production-4255.up.railway.app"
+#  VITE_VERCEL_API_URL_BASE= "http://localhost:3001"
